--- a/src/main/resources/static/app/index.html
+++ b/src/main/resources/static/app/index.html
@@ -57,6 +57,8 @@
   <script src="InvestigatorView/InvestigatorView.js"></script>
   <script src="ControlView/ControlView.js"></script>
   <script src="ControlRegister/ControlRegister.js"></script>
+  <script src="CommentsView/CommentsView.js"></script>
+  <script src="CommentRegister/CommentRegister.js"></script>
   <script src="services/sb-admin-2.js"></script>
   <script src="services/services.js"></script>
   <script src="components/version/version.js"></script>
