--- a/src/main/resources/static/app/PatientView/PatientView.html
+++ b/src/main/resources/static/app/PatientView/PatientView.html
@@ -8,6 +8,30 @@
     </div>
     <!-- /.row -->
     <div class="row">
+        <div class="col-lg-3 col-md-6">
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                    <div class="row">
+                        <div class="col-xs-3">
+                            <i class="fa fa-comments fa-5x"></i>
+                        </div>
+                        <div class="col-xs-9 text-right">
+                            <div class="huge">{{cant}}</div>
+                            <div>Tienes recomendaciones de tu doctor!</div>
+                        </div>
+                    </div>
+                </div>
+                <a href="#">
+                    <div class="panel-footer" ng-click="continueCS()">
+                        <span class="pull-left">View Details</span>
+                        <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+                        <div class="clearfix"></div>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </div>
+    <div class="row">
         <div class="col-lg-4">
             <div class="panel panel-default">
                 <div class="panel-heading">
