--- a/src/main/resources/static/app/CommentRegister/CommentRegister.html
+++ b/src/main/resources/static/app/CommentRegister/CommentRegister.html
@@ -19,12 +19,12 @@
                                 <form role="form">
                                     <div class="form-group">
 
-                                        <label> Title </label>
+                                        <label> Título </label>
                                         <br><br>
                                         <input type="String" ng-model="title">
                                         <br><br>
 
-                                        <label> Presión arterial diastólica (mmHg) </label>
+                                        <label> Descripción </label>
                                         <br><br>
                                         <textarea class="form-control" rows="3" ng-model="description"></textarea>
                                         <br><br>
