--- a/src/main/resources/static/app/PatientView/PatientView.html
+++ b/src/main/resources/static/app/PatientView/PatientView.html
@@ -17,7 +17,7 @@
                         </div>
                         <div class="col-xs-9 text-right">
                             <div class="huge">{{cant}}</div>
-                            <div>Tienes recomendaciones de tu doctor!</div>
+                            <div>{{recomendaciones}}</div>
                         </div>
                     </div>
                 </div>
@@ -87,12 +87,14 @@
                 </div>
                 <div class="panel-body">
                     <h1>Registro de datos de control
+                        <br><br>
                         <small>Con esta opción puedes registrar los datos de control para el diagnóstico médico.</small>
                     </h1>
                     <br><br>
                     <button type="button" class="btn btn-primary btn-lg btn-block" ng-click="continueCR()">Nuevo Registro de Datos</button>
                     <br><br>
                     <h1>Consultar datos de control
+                        <br><br>
                         <small>Con esta opción puedes consultar los datos de control para el diagnóstico médico.</small>
                     </h1>
                     <br><br>
