Todas las funcionalidades

--- a/src/main/resources/static/app/DoctorView/DoctorView.html
+++ b/src/main/resources/static/app/DoctorView/DoctorView.html
@@ -59,7 +59,7 @@
                                         <p>{{c.description}}</p>
                                     </div>
                                     <div class="panel-footer">
-                                        {{c.date}}
+                                        {{c.date | date:"dd/MMMM/yyyy"}}
                                     </div>
                                 </div>
                             </td>
