--- a/src/main/resources/static/app/index.html
+++ b/src/main/resources/static/app/index.html
@@ -59,6 +59,8 @@
   <script src="ControlRegister/ControlRegister.js"></script>
   <script src="CommentsView/CommentsView.js"></script>
   <script src="CommentRegister/CommentRegister.js"></script>
+  <script src="LoginView/LoginView.js"></script>
+  <script src="PatientChoiceView/PatientChoiceView.js"></script>
   <script src="services/sb-admin-2.js"></script>
   <script src="services/services.js"></script>
   <script src="components/version/version.js"></script>
