--- a/src/main/resources/static/app/ControlView/ControlView.html
+++ b/src/main/resources/static/app/ControlView/ControlView.html
@@ -26,7 +26,7 @@
                         </thead>
                         <tbody>
                         <tr ng-repeat="d in diagnostics" >
-                            <td>{{d.date}}</td>
+                            <td>{{d.date | date:"dd/MMMM/yyyy"}}</td>
                             <td>{{d.systolicPressure}}</td>
                             <td>{{d.diastolicPressure}}</td>
                             <td>{{d.bloodCholesterol}}</td>
