Dashboards paciente y doctor

--- a/src/main/resources/static/app/index.html
+++ b/src/main/resources/static/app/index.html
@@ -52,12 +52,18 @@
   <script src="view1/view1.js"></script>
   <script src="PatientAutorization/PatientAutorization.js"></script>
   <script src="PatientRegister/PatientRegister.js"></script>
-  <script src="PatientView/PatientView.js"></script>
-  <script src="DoctorView/DoctorView.js"></script>
+  <script src="PatientProfile/PatientProfile.js"></script>
+  <script src="UpdatePatient/UpdatePatient.js"></script>
+  <script src="HomePatient/HomePatient.js"></script>
+  <script src="HomeDoctor/HomeDoctor.js"></script>
+  <script src="Templates/templatePatient.js"></script>
+  <script src="Templates/templateDoctor.js"></script>
   <script src="InvestigatorView/InvestigatorView.js"></script>
   <script src="ControlView/ControlView.js"></script>
   <script src="ControlRegister/ControlRegister.js"></script>
   <script src="CommentsView/CommentsView.js"></script>
+  <script src="CommentsDoctorView/CommentsDoctorView.js"></script>
+  <script src="RegisterDoctorView/RegisterDoctorView.js"></script>
   <script src="CommentRegister/CommentRegister.js"></script>
   <script src="LoginView/LoginView.js"></script>
   <script src="PatientChoiceView/PatientChoiceView.js"></script>
