--- a/src/main/resources/static/app/CommentsDoctorView/CommentsDoctorView.html
+++ b/src/main/resources/static/app/CommentsDoctorView/CommentsDoctorView.html
@@ -1,8 +1,8 @@
-<div ng-include="'/app/Templates/templatePatient.html'"></div>
-<div id="page-wrapper">
+<div ng-include="'/app/Templates/templateDoctor.html'"></div>
+<div id="page-wrapper" ng-show="foundCD">
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header">Tus recomendaciones dadas por el doctor</h1>
+            <h1 class="page-header">Recomendaciones dadas al paciente</h1>
         </div>
         <!-- /.col-lg-12 -->
     </div>
