--- a/src/main/resources/static/app/ControlRegister/ControlRegister.html
+++ b/src/main/resources/static/app/ControlRegister/ControlRegister.html
@@ -1,9 +1,9 @@
-<div ng-include='"template.html"'></div>
+<div ng-include="'/app/Templates/templatePatient.html'"></div>
 <div id="wrapper">
     <div id="page-wrapper">
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Regitra los datos de tu control</h1>
+                <h1 class="page-header">Registra los datos de tu control</h1>
             </div>
             <!-- /.col-lg-12 -->
         </div>
