--- a/src/main/resources/static/app/ControlView/ControlView.html
+++ b/src/main/resources/static/app/ControlView/ControlView.html
@@ -1,4 +1,4 @@
-<div ng-include='"template.html"'></div>
+<div ng-include="'/app/Templates/templatePatient.html'"></div>
 <div id="page-wrapper">
     <div class="row">
         <div class="col-lg-12">
