--- a/src/main/resources/static/app/UpdatePatient/UpdatePatient.html
+++ b/src/main/resources/static/app/UpdatePatient/UpdatePatient.html
@@ -1,9 +1,9 @@
-<div ng-include="'/app/Templates/templateDoctor.html'"></div>
-<div id="wrapper" ng-show="foundC">
+<div ng-include="'/app/Templates/templatePatient.html'"></div>
+<div id="wrapper">
     <div id="page-wrapper">
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Regitra los datos de tu control</h1>
+                <h1 class="page-header">Regitra tus datos</h1>
             </div>
             <!-- /.col-lg-12 -->
         </div>
@@ -11,7 +11,6 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="panel panel-default">
-                    <div class="panel-heading">
                     </div>
                     <div class="panel-body">
                         <div class="row">
@@ -19,18 +18,22 @@
                                 <form role="form">
                                     <div class="form-group">
 
-                                        <label> Título </label>
+                                        <label> Dirección </label>
                                         <br><br>
-                                        <input type="String" ng-model="title">
-                                        <br><br>
-
-                                        <label> Descripción </label>
-                                        <br><br>
-                                        <textarea class="form-control" rows="3" ng-model="description"></textarea>
+                                        <input type="text" ng-model="address">
                                         <br><br>
 
+                                        <label> Código Postal </label>
+                                        <br><br>
+                                        <input type="number" ng-model="zip">
+                                        <br><br>
+
+                                        <label> Ciudad </label>
+                                        <br><br>
+                                        <input type="text" ng-model="city">
+                                        <br><br>
                                     </div>
-                                    <button type="submit" class="btn btn-default" ng-click="saveComment()">Aceptar</button>
+                                    <button type="submit" class="btn btn-default" ng-click="updatePerson()">Actualizar</button>
                                     <button type="reset" class="btn btn-default">Reiniciar</button>
                                 </form>
                             </div>
