--- a/src/main/resources/static/app/RegistersInvestigatorView/RegistersInvestigatorView.html
+++ b/src/main/resources/static/app/RegistersInvestigatorView/RegistersInvestigatorView.html
@@ -85,5 +85,45 @@
         </div>
         <!-- /.col-lg-4 -->
     </div>
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    Datos totales de cada control de los participantes del estudio.
+                </div>
+                <!-- /.panel-heading -->
+                <div class="panel-body">
+                    <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
+                        <thead>
+                        <tr>
+                            <th>Identificación del paciente</th>
+                            <th>Nombre del paciente</th>
+                            <th>Fecha de control</th>
+                            <th>Presión arterial sistólica (mmHg)</th>
+                            <th>Presión arterial diastólica (mmHg)</th>
+                            <th>Colesterol en la sangre (mg/dl)</th>
+                            <th>Ritmo cardiáco (Latidos por minuto)</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr ng-repeat="d in personAndDiagnostic" >
+                            <td>{{d[0]}}</td>
+                            <td>{{d[1]}}</td>
+                            <td>{{d[2] | date:"dd/MMMM/yyyy"}}</td>
+                            <td>{{d[3]}}</td>
+                            <td>{{d[4]}}</td>
+                            <td>{{d[5]}}</td>
+                            <td>{{d[6]}}</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                    <!-- /.table-responsive -->
+                </div>
+                <!-- /.panel-body -->
+            </div>
+            <!-- /.panel -->
+        </div>
+        <!-- /.col-lg-12 -->
+    </div>
 </div>
 <!-- /#page-wrapper -->
