--- a/src/main/resources/static/app/CommentRegister/CommentRegister.html
+++ b/src/main/resources/static/app/CommentRegister/CommentRegister.html
@@ -3,7 +3,7 @@
     <div id="page-wrapper">
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Regitra los datos de tu control</h1>
+                <h1 class="page-header">Registra tu recomendación</h1>
             </div>
             <!-- /.col-lg-12 -->
         </div>
