--- a/src/main/resources/static/app/index.html
+++ b/src/main/resources/static/app/index.html
@@ -70,6 +70,7 @@
   <script src="RegisterDoctorView/RegisterDoctorView.js"></script>
   <script src="CommentRegister/CommentRegister.js"></script>
   <script src="LoginView/LoginView.js"></script>
+  <script src="Login/Login.js"></script>
   <script src="PatientChoiceView/PatientChoiceView.js"></script>
   <script src="services/sb-admin-2.js"></script>
   <script src="services/services.js"></script>
