--- a/src/main/resources/static/app/CommentsDoctorView/CommentsDoctorView.html
+++ b/src/main/resources/static/app/CommentsDoctorView/CommentsDoctorView.html
@@ -18,6 +18,10 @@
                         {{recomendaciones}}
                     </div>
                     <div ng-show="commentsY">
+                        <br><br>
+                        <label>Filtrar por: </label>
+                        <input type="text" ng-model="busqueda">
+                        <br><br>
                         <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
                             <thead>
                             <tr>
@@ -25,7 +29,7 @@
                             </tr>
                             </thead>
                             <tbody>
-                            <tr ng-repeat="c in comments" >
+                            <tr ng-repeat="c in comments | filter: busqueda" >
                                 <td>
                                     <div class="panel panel-green">
                                         <div class="panel-heading">
