--- a/src/main/resources/static/app/CommentsView/CommentsView.html
+++ b/src/main/resources/static/app/CommentsView/CommentsView.html
@@ -17,6 +17,10 @@
                     <div ng-hide="commentsY">
                         {{recomendaciones}}
                     </div>
+                    <br><br>
+                    <label>Filtrar por: </label>
+                    <input type="text" ng-model="busqueda">
+                    <br><br>
                     <div ng-show="commentsY">
                         <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
                             <thead>
@@ -25,7 +29,7 @@
                             </tr>
                             </thead>
                             <tbody>
-                            <tr ng-repeat="c in comments" >
+                            <tr ng-repeat="c in comments | filter: busqueda" >
                                 <td>
                                     <div class="panel panel-green">
                                         <div class="panel-heading">
