--- a/src/main/resources/static/app/RegistersInvestigatorView/RegistersInvestigatorView.html
+++ b/src/main/resources/static/app/RegistersInvestigatorView/RegistersInvestigatorView.html
@@ -93,6 +93,9 @@
                 </div>
                 <!-- /.panel-heading -->
                 <div class="panel-body">
+                    <label>Filtrar por: </label>
+                    <input type="text" ng-model="busqueda">
+                    <br><br>
                     <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
                         <thead>
                         <tr>
@@ -106,7 +109,7 @@
                         </tr>
                         </thead>
                         <tbody>
-                        <tr ng-repeat="d in personAndDiagnostic" >
+                        <tr ng-repeat="d in personAndDiagnostic | filter: busqueda" >
                             <td>{{d[0]}}</td>
                             <td>{{d[1]}}</td>
                             <td>{{d[2] | date:"dd/MMMM/yyyy"}}</td>
