--- a/src/main/resources/static/app/index.html
+++ b/src/main/resources/static/app/index.html
@@ -51,12 +51,12 @@
   <script src="bower_components/chart/Chart.min.js"></script>
   <script src="bower_components/angular-chart/dist/angular-chart.min.js"></script>
   <script src="app.js"></script>
-  <script src="view1/view1.js"></script>
-  <script src="PatientAutorization/PatientAutorization.js"></script>
-  <script src="PatientRegister/PatientRegister.js"></script>
+  <script src="Register/Register.js"></script>
   <script src="PatientProfile/PatientProfile.js"></script>
-  <script src="UpdatePatient/UpdatePatient.js"></script>
+  <script src="UpdatePerson/UpdatePerson.js"></script>
   <script src="HomePatient/HomePatient.js"></script>
+  <script src="DoctorProfile/DoctorProfile.js"></script>
+  <script src="InvestigatorProfile/InvestigatorProfile.js"></script>
   <script src="HomeDoctor/HomeDoctor.js"></script>
   <script src="Templates/templatePatient.js"></script>
   <script src="Templates/templateDoctor.js"></script>
@@ -69,9 +69,7 @@
   <script src="CommentsDoctorView/CommentsDoctorView.js"></script>
   <script src="RegisterDoctorView/RegisterDoctorView.js"></script>
   <script src="CommentRegister/CommentRegister.js"></script>
-  <script src="LoginView/LoginView.js"></script>
   <script src="Login/Login.js"></script>
-  <script src="PatientChoiceView/PatientChoiceView.js"></script>
   <script src="services/sb-admin-2.js"></script>
   <script src="services/services.js"></script>
   <script src="components/version/version.js"></script>
