--- a/src/main/resources/static/app/Register/Register.html
+++ b/src/main/resources/static/app/Register/Register.html
@@ -54,9 +54,10 @@
 
                                         <h2> Rol </h2>
                                         <select name="rol" id="roleS">
-                                            <option value="1">Paciente</option>
-                                            <option value="2">Doctor</option>
-                                            <option value="3">Investigador</option>
+                                            <option value="1">Seleccione</option>
+                                            <option value="2">Paciente</option>
+                                            <option value="3">Doctor</option>
+                                            <option value="4">Investigador</option>
                                         </select>
                                     </div>
                                     <button type="submit" class="btn btn-default" ng-click="savePerson()">Aceptar</button>
