--- a/src/main/resources/static/app/Login/Login.html
+++ b/src/main/resources/static/app/Login/Login.html
@@ -17,7 +17,7 @@
                                                                                class="form-control" id="password" name="password" ng-model="credentials.password"/>
                             </div>
                             <button type="submit" class="btn btn-lg btn-success btn-block">Iniciar Sesión</button>
-                            <button ng-click="continueRegister()" class="btn btn-lg btn-success btn-block">Eres nuevo? regístrate!</button>
+                            <button ng-click="continueRegister()" class="btn btn-lg btn-link btn-block">Eres nuevo? regístrate!</button>
                         </fieldset>
                     </form>
                 </div>
